; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_acquire_esp.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_acquire_esp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_esp_path = common dso_local global i32 0, align 4
@ENOKEY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [147 x i8] c"Couldn't find EFI system partition. It is recommended to mount it to /boot or /efi.\0AAlternatively, use --esp-path= to specify path to mount point.\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Using EFI System Partition at %s.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*, i32*, i32*)* @acquire_esp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acquire_esp(i32 %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32, i32* @arg_esp_path, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = load i32*, i32** %11, align 8
  %20 = call i32 @find_esp_and_warn(i32 %14, i32 %15, i8** %12, i32* %16, i32* %17, i32* %18, i32* %19)
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %13, align 4
  %22 = load i32, i32* @ENOKEY, align 4
  %23 = sub nsw i32 0, %22
  %24 = icmp eq i32 %21, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %5
  %26 = load i32, i32* %13, align 4
  %27 = call i32 @log_error_errno(i32 %26, i8* getelementptr inbounds ([147 x i8], [147 x i8]* @.str, i64 0, i64 0))
  store i32 %27, i32* %6, align 4
  br label %39

28:                                               ; preds = %5
  %29 = load i32, i32* %13, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %28
  %32 = load i32, i32* %13, align 4
  store i32 %32, i32* %6, align 4
  br label %39

33:                                               ; preds = %28
  %34 = load i32, i32* @arg_esp_path, align 4
  %35 = load i8*, i8** %12, align 8
  %36 = call i32 @free_and_replace(i32 %34, i8* %35)
  %37 = load i32, i32* @arg_esp_path, align 4
  %38 = call i32 @log_debug(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %37)
  store i32 1, i32* %6, align 4
  br label %39

39:                                               ; preds = %33, %31, %25
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32 @find_esp_and_warn(i32, i32, i8**, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @free_and_replace(i32, i8*) #1

declare dso_local i32 @log_debug(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
